<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="@drawable/construction_material_steel"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnClose"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="center"
        android:text="X" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="231dp"
        android:layout_gravity="center"
        android:layout_weight="80"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMInus"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/minus"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/cantitate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:gravity="center"
            android:text="@string/nbone"
            android:textColor="#212121" />

        <Button
            android:id="@+id/btnPlus"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/plus"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/nume_textView"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Name"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_weight="20"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_pret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/pret_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/pret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>