<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="80"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/minus"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewCantitate"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewNume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="30"
            android:gravity="center"
            android:text="@string/nume"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewPret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="start"
            android:text="@string/pret"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewInputPret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="16"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>