<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introducere"
        android:textAllCaps="false"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conditions_text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392" />


    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewLoc"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textViewJud"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669" />

    <TextView
        android:id="@+id/textViewJud"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:layout_marginBottom="44dp"
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:drawableEnd="@drawable/ic_arrow_white"
        android:hint="@string/Judet"
        android:padding="12dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_first"
        app:layout_constraintEnd_toStartOf="@+id/textViewLoc"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.854" />

    <TextView
        android:id="@+id/textViewLoc"
        android:layout_width="177dp"
        android:layout_height="47dp"
        android:layout_marginBottom="44dp"
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:drawableEnd="@drawable/ic_arrow_white"
        android:hint="@string/Localitatea"
        android:padding="12dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.872" />
</androidx.constraintlayout.widget.ConstraintLayout>